# forecasting-capacity-planning

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/sample/: demand.csv
docs/: architecture.md  results.md
scripts/: backtest.py  plan_capacity.py
src/fcp/: __init__.py  backtest.py  io.py  metrics.py  models.py  planning.py  ridge_forecaster.py
src/forecasting_capacity_planning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_backtest.py  test_planning.py
